# golden-retriever

./: .codex_tmp_build_comparison_docx.py  .dockerignore  .env.example  .gitignore  Dockerfile.app  Dockerfile.worker  IMPLEMENTATION_MAP.md  Makefile  README.md  app.yaml  pyproject.toml  requirements.txt
.github/: deployment-trigger
apps/: __init__.py
apps/retrieval_demo/: README.md  __init__.py  app.py  app.yaml  databricks.yml  requirements.txt
apps/retrieval_demo/static/: app.css  app.js  index.html
artifacts/: repository-vs-original-design.docx  verification-2026-07-18.md
artifacts/histories/: remove-objects-pre-batch.json  root-sync-replay-smoke.json
docs/: README.md  architecture-production-readiness.md  google-drive-demo-implementation-spec.md  google-drive-integration.md  lakebase-temporal-demo-spec.md  workflow-topology.md
docs/adr/: 0001-workflow-boundaries.md
docs/operations/: metrics.md
docs/runbooks/: deploy-lakebase-temporal-demo.md  deploy-tmprl-demo-cloud.md  google-drive-demo.md  migration-and-rollback.md
src/retrieval/: __init__.py  config.py  content.py  embeddings.py  environment.py
src/retrieval/demo/: __init__.py  config.py  controls.py  events.py  fixtures.py  google_drive_provider.py  headless.py  ingestion_gate.py  models.py  scripted_provider.py  service.py  store.py
src/retrieval/demo/migrations/: 0001_demo_ui.sql  0002_google_drive_demo.sql  __init__.py  __main__.py
src/retrieval/google_drive/: __init__.py  bundle.py  client.py  config.py  lakebase.py  models.py  pdf.py  provider.py  staging.py
src/retrieval/lakebase/: __init__.py  config.py  connection.py  grants.py  indexing.py  repository.py  search.py
src/retrieval/temporal/: __init__.py  client.py  runtime_config.py  test_starter.py  worker.py
tests/: __init__.py
tests/app/: __init__.py  test_demo_api.py
tests/contract/: test_retrieval_repository_contract.py
tests/demo/: test_headless.py  test_late_writer.py  test_migrations.py  test_scenario.py  test_service.py  test_state_and_provider.py  test_temporal_late_writer.py  test_temporal_readiness.py
tests/google_drive/: __init__.py  test_client.py  test_config.py  test_ingestion.py  test_lakebase_store.py  test_pdf.py  test_provider.py  test_staging.py
tests/integration/: README.md  __init__.py  fake_provider.py  test_fake_provider.py  test_full_topology.py  test_temporal_environment.py
tests/lakebase/: test_config.py  test_connection.py  test_grants.py  test_indexing.py  test_migrations.py  test_repository.py  test_search.py
tests/load/: README.md  __init__.py  harness.py  test_harness_metrics.py  test_temporal_load.py
tests/replay/: README.md  __init__.py  test_exported_histories.py  workflow_registry.py
tests/unit/: test_client_policy.py  test_config.py  test_content.py  test_controller_contract.py  test_controller_recovery.py  test_deactivation_order.py  test_embeddings.py  test_environment.py  test_ids.py  test_lifecycle_fencing.py  test_metrics.py  test_quota_config_plumbing.py  test_sync_invariants.py  test_user_quota_logic.py  test_worker_inventory.py  test_worker_shutdown.py
(+51 files in other folders)
